--- a/packages/excalidraw/locales/zh-CN.json
+++ b/packages/excalidraw/locales/zh-CN.json
@@ -142,7 +142,7 @@
   },
   "library": {
     "noItems": "尚未添加任何项目……",
-    "hint_emptyLibrary": "选中画布上的项目添加到此处，或从下方的公共素材库中导入。",
+    "hint_emptyLibrary": "选中画布上的项目添加到此处。",
     "hint_emptyPrivateLibrary": "选中画布上的项目添加到此处。"
   },
   "buttons": {
