custom: 更新素材库和图标

--- a/packages/excalidraw/locales/zh-CN.json
+++ b/packages/excalidraw/locales/zh-CN.json
@@ -107,7 +107,7 @@
     "showBackground": "显示背景颜色选择器",
     "toggleTheme": "切换主题",
     "personalLib": "个人素材库",
-    "excalidrawLib": "Excalidraw 素材库",
+    "excalidrawLib": "素材库",
     "decreaseFontSize": "缩小字体大小",
     "increaseFontSize": "放大字体大小",
     "unbindText": "取消文本绑定",
