--- a/packages/excalidraw/locales/zh-TW.json
+++ b/packages/excalidraw/locales/zh-TW.json
@@ -107,7 +107,7 @@
     "showBackground": "顯示背景檢色器",
     "toggleTheme": "切換主題",
     "personalLib": "個人資料庫",
-    "excalidrawLib": "Excalidraw 資料庫",
+    "excalidrawLib": "資料庫",
     "decreaseFontSize": "縮小文字",
     "increaseFontSize": "放大文字",
     "unbindText": "取消綁定文字",
